--- a/platforms/android/assets/www/css/mobile-forms.css
+++ b/platforms/android/assets/www/css/mobile-forms.css
@@ -213,7 +213,8 @@ label {
 .about-body {
 	padding: 20px;
 	border: 5px solid #4a4a4a;
-	background-color: #2a2a2a
+	background-color: #2a2a2a;
+	text-shadow: none !important;
 }
 
 .about-p {
@@ -225,4 +226,8 @@ label {
 .about-authors li {
 	color: white !important;
 	font-weight: 100px;
+}
+
+.ui-bar {
+	box-sizing: border-box !important;
 }
